[tool.poetry]
name = "nas-tools"
version = "3.5.0"
description = "nas-tools 非官方项目，添加一些私有需求。"
authors = ["sgpublic <sgpublic2002@gmail.com>"]
license = "AGPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.0,<3.13"
alembic = "^1.11.2"
anitopy = "^2.1.1"
APScheduler = "^3.10.2"
async-generator = "^1.10"
backcall = "^0.2.0"
better-exceptions = "^0.3.3"
bs4 = "^0.0.1"
cacheout = "^0.14.1"
cachetools = "^5.3.1"
cn2an = "^0.5.21"
cryptography = "^41.0.3"
dateparser = "^1.1.8"
DBUtils = "^3.0.3"
ddddocr = "^1.5.5"
decorator = "^5.1.1"
fast-bencode = "^1.1.3"
Flask-Compress = "^1.14"
Flask-Login = "^0.6.2"
flask-restx = "^1.1.0"
flask-sock = "^0.6.0"
func-timeout = "^4.3.5"
guessit = "^3.7.1"
humanize = "^4.7.0"
icalendar = "^5.0.7"
influxdb = "^5.3.1"
iso639 = "^0.1.4"
jedi = "^0.19.0"
jsonpath = "^0.82"
libtorrent = "^2.0.9"
loguru = "^0.7.0"
matplotlib-inline = "^0.1.6"
openai = "^0.28.0"
parse = "^1.19.1"
parsel = "^1.8.1"
pexpect = "^4.8.0"
pickleshare = "^0.7.5"
pikpakapi = "^0.1.3"
pipdeptree = "^2.23.1"
PlexAPI = "^4.15.0"
prompt-toolkit = "^3.0.39"
psutil = "^5.9.5"
pycryptodome = "^3.18.0"
Pygments = "^2.16.1"
PyJWT = "^2.8.0"
pymongo = "^4.4.1"
PyMySQL = "^1.1.0"
pyperclip = "^1.8.2"
pypushdeer = "^0.0.3"
pyquery = "^2.0.0"
pyrsistent = "^0.19.3"
PySocks = "^1.7.1"
python-hosts = "^1.0.3"
pytz-deprecation-shim = "^0.1.0.post0"
PyVirtualDisplay = "^3.0"
qbittorrent-api = "^2023.9.53"
redis-py-cluster = "^2.1.3"
slack-bolt = "^1.18.0"
srt = "^3.5.3"
stack-data = "^0.6.2"
terminal-layout = "^2.1.6"
transmission-rpc = "^6.0.0"
undetected-chromedriver = "^3.5.3"
watchdog = "^3.0.0"
webdriver-manager = "^4.0.0"
zhconv = "^1.4.3"
ruamel-yaml = "^0.18.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
